# avogadropaper

AvogadroPaper/: AvogadroPaper.bib  AvogadroPaper.tex  CMakeLists.txt  Submission Letter.rtf
AvogadroPaper/images/: reps_mosaic.sh
AvogadroPaper/toc_graphics/Avogadro Cover Art.graffle/: data.plist  image10.tiff  image9.tiff
TimPython/: mainwindow.ui  standalone.py
